# mpgd

./: LICENSE  README.md  setup.cfg
mpgd/: mpgd.py
