[metadata]
name = MPGD
version = 0.0.1
author = HAOYU YANG
author_email = HAOYUY@NVIDIA.COM
description = Cost function for non-convex large scale optimization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/phdyang007/mpgd
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7
install_requires =
    torch>=1.0

